code styling by {styler}

--- a/tutorial.Rmd
+++ b/tutorial.Rmd
@@ -67,24 +67,23 @@ You can quickly run your first simple app if you wish by opening the `app.R` fil
 ```{r echo=FALSE}
 
 sliderInput("bins",
-           "Number of bins:",
-           min = 1,
-           max = 50,
-           value = 30)
-
+  "Number of bins:",
+  min = 1,
+  max = 50,
+  value = 30
+)
 ```
 
 
 ```{r echo=FALSE}
 renderPlot({
-    # generate bins based on input$bins from ui.R
-    x    <- faithful[, 2] 
-    bins <- seq(min(x), max(x), length.out = input$bins + 1)
-    
-    # draw the histogram with the specified number of bins
-    hist(x, breaks = bins, col = 'darkgray', border = 'white')
- })
+  # generate bins based on input$bins from ui.R
+  x <- faithful[, 2]
+  bins <- seq(min(x), max(x), length.out = input$bins + 1)
 
+  # draw the histogram with the specified number of bins
+  hist(x, breaks = bins, col = "darkgray", border = "white")
+})
 ```
 
 
@@ -101,14 +100,14 @@ Copy + paste in the code below into the file.
 library(shiny)
 
 # Gets the port # from Heroku
-port <- Sys.getenv('PORT')
+port <- Sys.getenv("PORT")
 
-# Runs the app in the working directory. By default this will search for an `app.R` file or 
+# Runs the app in the working directory. By default this will search for an `app.R` file or
 # a ui.R + server.R file combination
 # The host of 0.0.0.0 indicates the app runs at the web server's ip address
 shiny::runApp(
   appDir = getwd(),
-  host = '0.0.0.0',
+  host = "0.0.0.0",
   port = as.numeric(port)
 )
 ```
@@ -301,17 +300,17 @@ Now we need to modify the `run.R` file to run *behind* NGINX. We can modify our 
 library(shiny)
 
 # When we run nginx we need to change R to point to the /app folder manually
-setwd('/app')
+setwd("/app")
 
 # Create a file at the path /tmp/app-initalized
 # This tells nginx that the app is running, and it can now forward traffic to the custom 'port' below
 # If this file is created, nginx will simply wait forever until the app says its running
 file.create("/tmp/app-initialized")
-port <- '/tmp/nginx.socket'
-attr(port, 'mask') <- strtoi("117", 8)
-  
-  
-# Runs the app in the working directory. By default this will search for an `app.R` file or 
+port <- "/tmp/nginx.socket"
+attr(port, "mask") <- strtoi("117", 8)
+
+
+# Runs the app in the working directory. By default this will search for an `app.R` file or
 # a ui.R + server.R file combination
 # In this case the port is now the address to the nginx proxy
 shiny::runApp(
@@ -470,11 +469,11 @@ In order to make OAuth work we need to install the [httr](https://cran.r-project
 # Add a list of packages you want to install here
 # The list, like every list in R, should be comma seperated
 # Package names in quotes, e.g. c("lubridate","httr","dplyr")
-my_packages = c("httr")
+my_packages <- c("httr")
 
 
 # This is a simple function that will install the packages in the list
-install_if_missing = function(p) {
+install_if_missing <- function(p) {
   if (p %in% rownames(installed.packages()) == FALSE) {
     install.packages(p)
   }
@@ -493,7 +492,7 @@ We are going to pass more of the control of the app over to our `run.R` file. In
 To do this, simply comment, or remove this line from your `app.R` file,
 
 ```{r}
-# Run the application 
+# Run the application
 # shinyApp(ui = ui, server = server)
 ```
 
@@ -507,7 +506,7 @@ Copy and paste the code below, *in its entirety* into your `run.R` file.
 
 ```{r eval=FALSE}
 # TODO: To get this to work on Heroku you will need to fill out the info,
-# set APP_URL to your heroku apps url 
+# set APP_URL to your heroku apps url
 # set key = to the Github application's Client ID
 # set secret = to the Github application's Client Secret
 # Create a Github OAuth app here https://github.com/settings/applications/new
@@ -516,53 +515,51 @@ library(shiny)
 library(httr)
 
 RunHerokuApp <- function() {
-  
-# OAuth setup --------------------------------------------------------
+
+  # OAuth setup --------------------------------------------------------
   # (1) Most OAuth applications require that you redirect to a fixed and known
   # set of URLs. Many only allow you to redirect to a single URL: if this
   # is the case for, you'll need to create an app for testing with a localhost
   # url, and an app for your deployed app.
-  
+
   if (interactive()) {
     # testing url and token
     options(shiny.port = 8100)
     APP_URL <- "http://localhost:8100/"
-    
+
     # (2) Note that secret is not really secret, and it's fine to include inline
     app <- oauth_app("shiny-local-app",
       key = "51d46f96810d1fd182a2",
       secret = "66eec8782825eeb61007dbef32f91afc9c3587aa",
       redirect_uri = APP_URL
     )
-    
   } else {
-    
-    setwd('/app')
-    
+    setwd("/app")
+
     # deployed URL and token
     APP_URL <- "https://my-app-name.herokuapp.com/" # NOTE: SET THIS TO YOUR APP'S URL
-    
+
     # (2) Note that secret is not really secret, and it's fine to include inline
     # NOTE: SET THIS BASED ON YOUR GITHUB APP.
-    app <- oauth_app("my-heroku-app", 
+    app <- oauth_app("my-heroku-app",
       key = "MY_APP_ID",
       secret = "MY_SECRET_KEY",
       redirect_uri = APP_URL
     )
   }
-  
+
   # (3) Here I'm using a canned endpoint, but you can create with oauth_endpoint()
   api <- oauth_endpoints("github")
-  
+
   # (4) Always request the minimal scope needed. For github, an empty scope
   # gives read-only access to public info
   scope <- ""
-  
-# Shiny -------------------------------------------------------------------
-  
+
+  # Shiny -------------------------------------------------------------------
+
   # Bring in the server.R and ui.R objects
-  source('app.R')
-  
+  source("app.R")
+
   has_auth_code <- function(params) {
     # params is a list object containing the parsed URL parameters. Return TRUE if
     # based on these parameters, it looks like auth codes are present that we can
@@ -570,14 +567,14 @@ RunHerokuApp <- function() {
     # flow.
     return(!is.null(params$code))
   }
-  
+
   # (5) A little-known feature of Shiny is that the UI can be a function, not just
   # objects. You can use this to dynamically render the UI based on the request.
   # We're going to pass this uiFunc, not ui, to shinyApp(). If you're using
   # ui.R/server.R style files, that's fine too--just make this function the last
   # expression in your ui.R file.
   uiFunc <- function(req) {
-    
+
     # (6) Check if HTTPs
     if (!interactive()) {
       if (req$HTTP_X_FORWARDED_PROTO != "https") {
@@ -586,51 +583,50 @@ RunHerokuApp <- function() {
     } else {
       print("localhost app, not verifying https")
     }
-    
+
     # (7) Check if token in URL, else redirect
     if (!has_auth_code(parseQueryString(req$QUERY_STRING))) {
       url <- oauth2.0_authorize_url(api, app, scope = scope)
       redirect <- sprintf("location.replace(\"%s\");", url)
       tags$script(HTML(redirect))
     } else {
-      
+
       # (8) Manually create a token (saved to local environment)
       token <<- oauth2.0_token(
         app = app,
         endpoint = api,
         credentials = oauth2.0_access_token(
-          api, 
-          app, 
+          api,
+          app,
           parseQueryString(req$QUERY_STRING)$code
         ),
         cache = FALSE
       )
-      
+
       # (9) Perform a GET request to confirm access
       resp <- GET("https://api.github.com/user", config(token = token))
       stop_for_status(resp) # CRASH APP IF ERROR RETURNED
-      
+
       return(ui) # otherwise return UI
     }
   }
-  
+
   # (10) Note that we're using uiFunc, not ui!
   if (interactive()) {
-    
+
     # run locally
     shinyApp(uiFunc, server)
-    
   } else {
-    
+
     # Create a file at the path /tmp/app-initalized
     # This tells nginx that the app is running, and it can now forward traffic to the custom 'port' below
     # If this file is created, nginx will simply wait forever until the app says its running
     file.create("/tmp/app-initialized")
-    port <- '/tmp/nginx.socket'
-    attr(port, 'mask') <- strtoi("117", 8)
-      
-      
-    # Runs the app in the working directory. By default this will search for an `app.R` file or 
+    port <- "/tmp/nginx.socket"
+    attr(port, "mask") <- strtoi("117", 8)
+
+
+    # Runs the app in the working directory. By default this will search for an `app.R` file or
     # a ui.R + server.R file combination
     # In this case the port is now the address to the nginx proxy
     shiny::runApp(
@@ -665,7 +661,7 @@ APP_URL <- "https://my-app-name.herokuapp.com/" # NOTE: SET THIS TO YOUR APP'S U
 
 # (2) Note that secret is not really secret, and it's fine to include inline
 # NOTE: SET THIS BASED ON YOUR GITHUB APP.
-app <- oauth_app("my-heroku-app", 
+app <- oauth_app("my-heroku-app",
   key = "MY_APP_ID",
   secret = "MY_SECRET_KEY",
   redirect_uri = APP_URL
@@ -699,7 +695,7 @@ In R you can add the environment variables to your app by again modifying the co
 APP_URL <- Sys.getenv("APP_URL") # Set this variable on heroku!
 
 # register app
-app <- oauth_app("my-heroku-app", 
+app <- oauth_app("my-heroku-app",
   key = Sys.getenv("APP_ID"), # set this on HerokU!
   secret = Sys.getenv("CLIENT_SECRET"), # set this on Heroku!
   redirect_uri = APP_URL
@@ -743,9 +739,9 @@ In order to do this we add the `devtools` package, and add `devtools::install_gi
 
 ```{r}
 # init.R
-my_packages = c("httr","RPostgreSQL","devtools")
+my_packages <- c("httr", "RPostgreSQL", "devtools")
 
-install_if_missing = function(p) {
+install_if_missing <- function(p) {
   if (p %in% rownames(installed.packages()) == FALSE) {
     install.packages(p)
   }
@@ -776,30 +772,29 @@ You can access it via R by using the following function in your Shiny app.
 
 ```{r}
 postgress.connect <- function() {
-  
+
   # Make sure you install these!
   require(RPostgreSQL)
   require(pool)
-  
-  #driver
+
+  # driver
   drv <- dbDriver("PostgreSQL")
-  
-  #attempt connection
+
+  # attempt connection
   if (Sys.getenv("DATABASE_URL") != "") {
     url <- httr::parse_url(Sys.getenv("DATABASE_URL"))
-    pool <- dbPool(drv
-                   , host     = url$hostname
-                   , port     = url$port
-                   , user     = url$user
-                   , password = url$password
-                   , dbname   = url$path
+    pool <- dbPool(drv,
+      host = url$hostname,
+      port = url$port,
+      user = url$user,
+      password = url$password,
+      dbname = url$path
     )
     print("Heroku application detected connecting to Postgres")
-    
   } else {
     # You would setup a localhost  db connection to your personal computer here!
   }
-  
+
   return(pool)
 }
 ```
@@ -819,99 +814,99 @@ For example, you can modify your `app.R` to include a file upload button, and th
 library(shiny)
 library(RPostgreSQL)
 library(pool)
-  
+
 
 # Define UI for application that draws a histogram
 ui <- fluidPage(
-   
-   # Application title
-   titlePanel("File upload"),
-   
-   # Sidebar with a slider input for number of bins 
-   sidebarLayout(
-      sidebarPanel(
-        fileInput("file1", "Choose CSV File",
-          multiple = FALSE,
-          accept = c(
-            "text/csv",
-            "text/comma-separated-values,text/plain",
-            ".csv")
-          ),
-        actionButton("viewData", label = "View data")
+
+  # Application title
+  titlePanel("File upload"),
+
+  # Sidebar with a slider input for number of bins
+  sidebarLayout(
+    sidebarPanel(
+      fileInput("file1", "Choose CSV File",
+        multiple = FALSE,
+        accept = c(
+          "text/csv",
+          "text/comma-separated-values,text/plain",
+          ".csv"
+        )
       ),
-      
-      # Show a plot of the generated distribution
-      mainPanel(
-         tableOutput('postgresTable')
-      )
-   )
+      actionButton("viewData", label = "View data")
+    ),
+
+    # Show a plot of the generated distribution
+    mainPanel(
+      tableOutput("postgresTable")
+    )
+  )
 )
 
 # Define server logic required to draw a histogram
 server <- function(input, output) {
-  
   postgress.connect <- function() {
-    #driver
+    # driver
     drv <- dbDriver("PostgreSQL")
-    #attempt connection
+    # attempt connection
     if (Sys.getenv("DATABASE_URL") != "") {
       url <- httr::parse_url(Sys.getenv("DATABASE_URL"))
-      pool <- dbPool(drv
-                     , host     = url$hostname
-                     , port     = url$port
-                     , user     = url$user
-                     , password = url$password
-                     , dbname   = url$path
+      pool <- dbPool(drv,
+        host = url$hostname,
+        port = url$port,
+        user = url$user,
+        password = url$password,
+        dbname = url$path
       )
       print("Heroku application detected connecting to Postgres")
-      
     } else {
       # SETUP local connection here
     }
     return(pool)
   }
-  
-  
+
+
   # File upload event listener
-  observeEvent(input$file1,{
+  observeEvent(input$file1, {
     # input$file1 will be NULL initially.
     req(input$file1)
-    
+
     # check to make sure an error doesn't occur
-    tryCatch({
-      df <- read.csv(input$file1$datapath)
-      # create connection
-      pg <- postgress.connect()
-      # remove table if exists
-      try(dbRemoveTable(pg, "upload_table"))
-      # write a new table
-      dbWriteTable(pg, 'upload_table', df, temporary = FALSE)
-      # close connection
-      pool::poolClose(pg)
-    }, error = function(e) {
+    tryCatch(
+      {
+        df <- read.csv(input$file1$datapath)
+        # create connection
+        pg <- postgress.connect()
+        # remove table if exists
+        try(dbRemoveTable(pg, "upload_table"))
+        # write a new table
+        dbWriteTable(pg, "upload_table", df, temporary = FALSE)
+        # close connection
+        pool::poolClose(pg)
+      },
+      error = function(e) {
         # return a safeError if a parsing error occurs
         stop(safeError(e))
       }
     )
   })
-  
+
   # create a reactive object for the database
   pgData <- eventReactive(input$viewData, {
     # create connection
     pg <- postgress.connect()
     # read data
-    data <- dbReadTable(pg, 'upload_table')
+    data <- dbReadTable(pg, "upload_table")
     # close connection
     pool::poolClose(pg)
     # return data
     return(data)
   })
-  
+
   output$postgresTable <- renderTable({
     pgData()
   })
 }
-
 ```
 
 It should work like the below,
@@ -922,27 +917,27 @@ fileInput("file1", "Choose CSV File",
   accept = c(
     "text/csv",
     "text/comma-separated-values,text/plain",
-    ".csv")
+    ".csv"
   )
+)
 actionButton("viewData", label = "View data")
 ```
 
 ```{r echo=FALSE}
 postgress.connect <- function() {
-  #driver
+  # driver
   drv <- dbDriver("PostgreSQL")
-  #attempt connection
+  # attempt connection
   if (Sys.getenv("DATABASE_URL") != "") {
     url <- httr::parse_url(Sys.getenv("DATABASE_URL"))
-    pool <- dbPool(drv
-                   , host     = url$hostname
-                   , port     = url$port
-                   , user     = url$user
-                   , password = url$password
-                   , dbname   = url$path
+    pool <- dbPool(drv,
+      host = url$hostname,
+      port = url$port,
+      user = url$user,
+      password = url$password,
+      dbname = url$path
     )
     print("Heroku application detected connecting to Postgres")
-    
   } else {
     # SETUP local connection here
   }
@@ -951,22 +946,24 @@ postgress.connect <- function() {
 
 
 # File upload event listener
-observeEvent(input$file1,{
+observeEvent(input$file1, {
   # input$file1 will be NULL initially.
   req(input$file1)
-  
+
   # check to make sure an error doesn't occur
-  tryCatch({
-    df <- read.csv(input$file1$datapath)
-    # create connection
-    pg <- postgress.connect()
-    # remove table if exists
-    try(dbRemoveTable(pg, "upload_table"))
-    # write a new table
-    dbWriteTable(pg, 'upload_table', df, temporary = FALSE)
-    # close connection
-    pool::poolClose(pg)
-  }, error = function(e) {
+  tryCatch(
+    {
+      df <- read.csv(input$file1$datapath)
+      # create connection
+      pg <- postgress.connect()
+      # remove table if exists
+      try(dbRemoveTable(pg, "upload_table"))
+      # write a new table
+      dbWriteTable(pg, "upload_table", df, temporary = FALSE)
+      # close connection
+      pool::poolClose(pg)
+    },
+    error = function(e) {
       # return a safeError if a parsing error occurs
       stop(safeError(e))
     }
@@ -978,15 +975,15 @@ pgData <- eventReactive(input$viewData, {
   # create connection
   pg <- postgress.connect()
   # read data
-  data <- dbReadTable(pg, 'upload_table')
+  data <- dbReadTable(pg, "upload_table")
   # close connection
   pool::poolClose(pg)
   # return data
   return(data)
 })
-  
+
 renderTable({
-    pgData()
+  pgData()
 })
 ```
 
@@ -998,9 +995,9 @@ If you want to host an [interactive RMarkdown](https://rmarkdown.rstudio.com/aut
 ```{r eval=FALSE}
 # Add as final run call in your run.R
 rmarkdown::run(
-    'my-markdown.Rmd'
-  , shiny_args = list(
-      port = port
+  "my-markdown.Rmd",
+  shiny_args = list(
+    port = port
   )
 )
 ```
